// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiCollapsibleNav can be docked 1`] = `
<div>
  <div
    data-focus-guard="true"
    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
    tabindex="0"
  />
  <div
    data-focus-guard="true"
    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
    tabindex="1"
  />
  <div
    data-focus-lock-disabled="false"
  >
    <div
      class="euiFlyout euiFlyout--small euiCollapsibleNav euiCollapsibleNav--isDocked"
      role="dialog"
      tabindex="0"
    />
  </div>
  <div
    data-focus-guard="true"
    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
    tabindex="0"
  />
</div>
`;

exports[`EuiCollapsibleNav is rendered 1`] = `
Array [
  <div />,
  <div>
    <div
      data-focus-guard="true"
      style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        aria-label="aria-label"
        class="euiFlyout euiFlyout--small euiCollapsibleNav testClass1 testClass2"
        data-test-subj="test subject string"
        role="dialog"
        tabindex="0"
      />
    </div>
    <div
      data-focus-guard="true"
      style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
      tabindex="0"
    />
  </div>,
]
`;
